more css fixes w/ alignment.:

--- a/assets/static/css/fragments/projects.scss
+++ b/assets/static/css/fragments/projects.scss
@@ -138,12 +138,10 @@ nav.projects-nav {
   }
 
   .projects {
-    margin-left: 0;
-    padding: 0;
 
     .project {
-      width: 100%;
-      margin-left: 0;
+      width: 108%;
+      margin-left: -4%;
     }
 
   }
